--- a/hot-polymer-monkey.html
+++ b/hot-polymer-monkey.html
@@ -33,6 +33,73 @@ Series of monkey patches for the polymer project, waiting for PRs to be evaluate
               .replace(/%20/g, '+');
         };
 
+
+        /* MONKEY PATCH app-drawer, IMPLEMENTS:
+          https://github.com/PolymerElements/paper-dropdown-menu/issues/114
+
+        /**
+         * Resets all non-disabled form custom elements to their initial values.
+         */
+        var e = document.createElement('form', { is: 'iron-form' } );
+        var p = Object.getPrototypeOf( e );
+
+        p._resetCustomElements = function() {
+          debugger;
+          // Reset all the registered custom components. We need to do this after
+          // the native reset, since programmatically changing the `value` of some
+          // native elements (iron-input in particular) does not notify its
+          // parent `paper-input`, which will now display the wrong value.
+          this.async(function() {
+            for (var el, i = 0; el = this._customElements[i], i < this._customElements.length; i++) {
+              if (el.disabled)
+                continue;
+
+              if (this._usesCheckedInsteadOfValue(el)) {
+                el.checked = this._customElementsInitialValues[i];
+              } else {
+                // The native input/textarea displays literal "undefined" when its
+                // its value is set to undefined, so default to null instead.
+                var value = this._customElementsInitialValues[i];
+                if (value === undefined) {
+                  value = null;
+                }
+                if( el._setValue ) {
+                  el._setValue( value );
+                  if( el.contentElement && _valueChangedHack ) el._valueChangedHack( value );
+                } else {
+                 el.value = value;
+                }
+
+                // In the shady DOM, the native form is all-seeing, and will
+                // reset the nested inputs inside <paper-input> and <paper-textarea>.
+                // In particular, it resets them to what it thinks the default value
+                // is (i.e. "", before the bindings have ran), and since this is
+                // a programmatic update, it also doesn't fire any events.
+                // Which means we need to manually update the native element's value.
+                if (el.inputElement) {
+                  el.inputElement.value = el.value;
+                } else if (el.textarea) {
+                  el.textarea.value = el.value;
+                }
+              }
+              el.invalid = false;
+            }
+
+            this.fire('iron-form-reset');
+          }, 1);
+        };
+
+
+        var e = document.createElement('paper-dropdown-menu');
+        var p = Object.getPrototypeOf( e );
+        p._valueChangedHack = function( v ){
+          // Handle reset. The "if" here is not strictly necessary
+          if( v === null ){
+              this.contentElement.selected = v;
+          }
+        };
+
+
         /* MONKEY PATCH app-drawer, IMPLEMENTS:
           https://github.com/PolymerElements/app-layout/issues/385
         */
